--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -848,7 +848,7 @@ parameters:
 		-
 			message: '''
 				#^Call to deprecated method getTypeByAlias\(\) of class Joomla\\CMS\\UCM\\UCMType\:
-				__DEPLOY_VERSION__ will be removed in 7\.0 without replacement$#
+				6.0.0 will be removed in 7\.0 without replacement$#
 			'''
 			identifier: method.deprecated
 			count: 2
@@ -890,7 +890,7 @@ parameters:
 		-
 			message: '''
 				#^Instantiation of deprecated class Joomla\\CMS\\UCM\\UCMType\:
-				__DEPLOY_VERSION__ will be removed in 7\.0 without replacement$#
+				6.0.0 will be removed in 7\.0 without replacement$#
 			'''
 			identifier: new.deprecated
 			count: 2
@@ -1526,7 +1526,7 @@ parameters:
 		-
 			message: '''
 				#^Call to deprecated method getTypeByTable\(\) of class Joomla\\CMS\\UCM\\UCMType\:
-				__DEPLOY_VERSION__ will be removed in 7\.0 without replacement$#
+				6.0.0 will be removed in 7\.0 without replacement$#
 			'''
 			identifier: method.deprecated
 			count: 1
@@ -1557,7 +1557,7 @@ parameters:
 		-
 			message: '''
 				#^Instantiation of deprecated class Joomla\\CMS\\UCM\\UCMType\:
-				__DEPLOY_VERSION__ will be removed in 7\.0 without replacement$#
+				6.0.0 will be removed in 7\.0 without replacement$#
 			'''
 			identifier: new.deprecated
 			count: 1
@@ -13435,7 +13435,7 @@ parameters:
 		-
 			message: '''
 				#^Call to deprecated method getTypeByAlias\(\) of class Joomla\\CMS\\UCM\\UCMType\:
-				__DEPLOY_VERSION__ will be removed in 7\.0 without replacement$#
+				6.0.0 will be removed in 7\.0 without replacement$#
 			'''
 			identifier: method.deprecated
 			count: 1
@@ -13444,7 +13444,7 @@ parameters:
 		-
 			message: '''
 				#^Call to deprecated method getTypeByTable\(\) of class Joomla\\CMS\\UCM\\UCMType\:
-				__DEPLOY_VERSION__ will be removed in 7\.0 without replacement$#
+				6.0.0 will be removed in 7\.0 without replacement$#
 			'''
 			identifier: method.deprecated
 			count: 1
@@ -13464,7 +13464,7 @@ parameters:
 		-
 			message: '''
 				#^Instantiation of deprecated class Joomla\\CMS\\UCM\\UCMType\:
-				__DEPLOY_VERSION__ will be removed in 7\.0 without replacement$#
+				6.0.0 will be removed in 7\.0 without replacement$#
 			'''
 			identifier: new.deprecated
 			count: 1
@@ -14617,7 +14617,7 @@ parameters:
 		-
 			message: '''
 				#^Class Joomla\\CMS\\UCM\\UCMContent extends deprecated class Joomla\\CMS\\UCM\\UCMBase\:
-				__DEPLOY_VERSION__ will be removed in 7\.0 without replacement$#
+				6.0.0 will be removed in 7\.0 without replacement$#
 			'''
 			identifier: class.extendsDeprecatedClass
 			count: 1
