[6.x] Typos action improvement (#45745)
* [6.x] Typos action improvement

small tweaks to the extend-exclude settings

Removed the exception for `"/administrator/components/com_admin/sql/*` as its no longer needed

Allowed typos to check the en-GB installation language files

Corrected the path for `/includes/`

--- a/.github/workflows/typos.toml
+++ b/.github/workflows/typos.toml
@@ -6,10 +6,10 @@
 [files]
 extend-exclude = [
     "/templates/system/*.html",
-    "/administrator/components/com_admin/sql/*",
     "/build/media_source/vendor/tinymce/langs/*",
     "/installation/language/*",
-    "includes/*.html",
+    "!/installation/language/en-GB/",
+    "/includes/*.html",
     "/plugins/sampledata/testing/*",
 ]
 
