remove old php versions from from windows workflow tests (#45865)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,7 +174,7 @@ jobs:
     needs: [code-style-php]
     strategy:
       matrix:
-        php_version: ['8.1', '8.2', '8.3', '8.4']
+        php_version: ['8.3', '8.4']
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache/restore@v4
@@ -200,7 +200,7 @@ jobs:
     needs: [code-style-php]
     strategy:
       matrix:
-        php_version: ['8.1', '8.2', '8.3', '8.4']
+        php_version: ['8.3', '8.4']
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache/restore@v4
