--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "config": {
     "optimize-autoloader": true,
     "platform": {
-      "php": "8.1.0"
+      "php": "8.3.0"
     },
     "vendor-dir": "libraries/vendor",
     "github-protocols": ["https"]
@@ -46,42 +46,42 @@
     }
   },
   "require": {
-    "php": "^8.1.0",
-    "joomla/application": "^3.0.4",
-    "joomla/archive": "^3.0.4",
-    "joomla/authentication": "^3.0.3",
-    "joomla/console": "^3.0.3",
-    "joomla/crypt": "^3.0.3",
-    "joomla/data": "^3.0.3",
-    "joomla/database": "^3.4",
-    "joomla/di": "^3.1.1",
-    "joomla/event": "^3.0.2",
-    "joomla/filter": "^3.0.4",
-    "joomla/filesystem": "^3.1.2",
-    "joomla/http": "^3.1.2",
-    "joomla/input": "~3.0",
-    "joomla/language": "~3.0",
-    "joomla/oauth1": "~3.0",
-    "joomla/oauth2": "~3.0",
-    "joomla/registry": "~3.0",
-    "joomla/router": "~3.0",
-    "joomla/session": "^3.0.3",
-    "joomla/string": "^3.0.4",
-    "joomla/uri": "~3.0",
-    "joomla/utilities": "~3.0",
+    "php": "^8.3.0",
+    "joomla/application": "^4.0",
+    "joomla/archive": "^4.0",
+    "joomla/authentication": "^4.0",
+    "joomla/console": "^4.0",
+    "joomla/crypt": "^4.0",
+    "joomla/data": "^4.0",
+    "joomla/database": "^4.0",
+    "joomla/di": "^4.0",
+    "joomla/event": "^4.0",
+    "joomla/filter": "^4.0",
+    "joomla/filesystem": "^4.0",
+    "joomla/http": "^4.0",
+    "joomla/input": "^4.0",
+    "joomla/language": "^4.0",
+    "joomla/oauth1": "^4.0",
+    "joomla/oauth2": "^4.0",
+    "joomla/registry": "^4.0",
+    "joomla/router": "^4.0",
+    "joomla/session": "^4.0",
+    "joomla/string": "^4.0",
+    "joomla/uri": "^4.0",
+    "joomla/utilities": "^4.0",
     "algo26-matthias/idna-convert": "^4.0.4",
     "defuse/php-encryption": "^2.4.0",
-    "doctrine/inflector": "^1.4.4",
+    "doctrine/inflector": "^2.0.10",
     "fig/link-util": "^1.2.0",
     "google/recaptcha": "^1.3.1",
-    "laminas/laminas-diactoros": "^2.26.0",
+    "laminas/laminas-diactoros": "^3.6.0",
     "paragonie/sodium_compat": "^1.21.1",
     "phpmailer/phpmailer": "^6.10.0",
     "psr/link": "~1.1.1",
-    "symfony/console": "^6.4.23",
-    "symfony/error-handler": "^6.4.23",
-    "symfony/ldap": "^6.4.13",
-    "symfony/options-resolver": "^6.4.16",
+    "symfony/console": "^7",
+    "symfony/error-handler": "^7",
+    "symfony/ldap": "^7",
+    "symfony/options-resolver": "^7",
     "symfony/polyfill-mbstring": "^1.32.0",
     "symfony/web-link": "^6.4.22",
     "symfony/yaml": "^6.4.23",
@@ -108,8 +108,8 @@
     "phpunit/phpunit": "^9.6.23",
     "friendsofphp/php-cs-fixer": "^3.84.0",
     "squizlabs/php_codesniffer": "^3.13.2",
-    "joomla/mediawiki": "^3.0",
-    "joomla/test": "~3.0",
+    "joomla/mediawiki": "^4.0",
+    "joomla/test": "~4.0",
     "phpstan/phpstan": "^2.1.19",
     "phpstan/phpstan-deprecation-rules": "^2.0.3"
   },
