[6.0] Updating TinyMCE to 8.0.1 (#45844)
* Updating TinyMCE to 8.0.1
* Adding language strings
* Switching to official translation files
* Minify translation files

--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "shepherd.js": "^11.2.0",
     "short-and-sweet": "^1.0.4",
     "skipto": "^4.1.7",
-    "tinymce": "^6.8.6",
+    "tinymce": "^8.0.1",
+    "tinymce-i18n": "^25.8.4",
     "vue": "^3.5.18",
     "vue-focus-lock": "^2.0.7",
     "vuex": "^4.1.0",
