--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -13678,6 +13678,16 @@ parameters:
 
 		-
 			message: '''
+				#^Call to method getDispatcher\(\) of deprecated interface Joomla\\CMS\\Application\\EventAwareInterface\:
+				4\.3 will be removed in 7\.0
+				             This interface will be removed without replacement as the Joomla 3\.x compatibility layer will be removed$#
+			'''
+			identifier: method.deprecatedInterface
+			count: 1
+			path: libraries/src/Plugin/CMSPlugin.php
+
+		-
+			message: '''
 				#^Call to deprecated method getCache\(\) of class Joomla\\CMS\\Factory\:
 				4\.3 will be removed in 6\.0
 				             Use the cache controller factory instead
