--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "accessibility": "^3.0.17",
+    "altcha": "^2.2.4",
     "awesomplete": "^1.1.7",
     "bootstrap": "^5.3.8",
     "choices.js": "^11.1.0",
