--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
       "php": "8.3.0"
     },
     "vendor-dir": "libraries/vendor",
-    "github-protocols": ["https"]
+    "github-protocols": ["https"],
+    "audit": {
+      "ignore": { "PKSA-3mms-4n3p-ym65": "Temporary until Webauthn plugin has been updated." }
+    }
   },
   "support": {
     "issues": "https://issues.joomla.org/",
@@ -74,9 +77,9 @@
     "doctrine/inflector": "^2.1.0",
     "fig/link-util": "^1.2.0",
     "google/recaptcha": "^1.3.1",
-    "laminas/laminas-diactoros": "^3.6.0",
-    "paragonie/sodium_compat": "^1.21.2",
-    "phpmailer/phpmailer": "^6.10.0",
+    "laminas/laminas-diactoros": "^3.8.0",
+    "paragonie/sodium_compat": "^1.23.0",
+    "phpmailer/phpmailer": "^6.12.0",
     "psr/link": "~1.1.1",
     "symfony/console": "^7",
     "symfony/error-handler": "^7",
@@ -84,7 +87,7 @@
     "symfony/options-resolver": "^7",
     "symfony/polyfill-mbstring": "^1.33.0",
     "symfony/web-link": "^6.4.24",
-    "symfony/yaml": "^6.4.25",
+    "symfony/yaml": "^6.4.30",
     "wamania/php-stemmer": "^4.0.0",
     "tobscure/json-api": "dev-joomla-backports",
     "willdurand/negotiation": "^3.1.0",
@@ -94,8 +97,8 @@
     "ext-gd": "*",
     "web-auth/webauthn-lib": "4.5.2",
     "ext-dom": "*",
-    "composer/ca-bundle": "^1.5.8",
-    "dragonmantank/cron-expression": "^3.4.0",
+    "composer/ca-bundle": "^1.5.10",
+    "dragonmantank/cron-expression": "^3.6.0",
     "enshrined/svg-sanitize": "^0.22.0",
     "lcobucci/jwt": "^4.3.0",
     "web-token/jwt-library": "^3.4.8",
@@ -103,15 +106,15 @@
     "jfcherng/php-diff": "^6.16.2",
     "php-tuf/php-tuf": "^1.0.3",
     "php-debugbar/php-debugbar": "^2.2.4",
-    "altcha-org/altcha": "^1.2"
+    "altcha-org/altcha": "^1.3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.6.29",
-    "friendsofphp/php-cs-fixer": "^3.88.0",
-    "squizlabs/php_codesniffer": "^3.13.4",
+    "phpunit/phpunit": "^9.6.31",
+    "friendsofphp/php-cs-fixer": "^3.91.3",
+    "squizlabs/php_codesniffer": "^3.13.5",
     "joomla/mediawiki": "^4.0",
     "joomla/test": "~4.0",
-    "phpstan/phpstan": "^2.1.29",
+    "phpstan/phpstan": "^2.1.33",
     "phpstan/phpstan-deprecation-rules": "^2.0.3"
   },
   "replace": {
